--- a/src/components/Player/Player.module.scss
+++ b/src/components/Player/Player.module.scss
@@ -28,36 +28,60 @@ $gray: rgba(105, 105, 105, 0.3);
   min-height: 140px;
   grid-template-columns: auto;
   grid-template-rows: repeat(2, auto);
+  padding: 16px 0;
+  row-gap: 16px;
+
+  &:not(:last-child) {
+    padding-bottom: 0;
+  }
 
   @include screen(md) {
     grid-template-columns: 120px 1fr;
     grid-template-rows: auto;
     column-gap: 50px;
-    padding: 30px 0;
-
-    &:not(:last-child) {
-      padding-bottom: 0;
-    }
+    row-gap: 0;
   }
 
   & img {
-    width: 120px;
-    height: 120px;
+    width: 80px;
+    height: 80px;
     border-radius: 12px;
     object-fit: cover;
     margin-left: auto;
+    margin-right: auto;
+
+    @include screen(md) {
+      width: 120px;
+      height: 120px;
+      margin-left: auto;
+      margin-right: 0;
+      margin-bottom: 0;
+    }
   }
 }
 
 .title {
   margin: 0;
-  font-size: 32px;
+  font-size: 18px;
   margin-bottom: 16px;
+  text-align: center;
+
+  @include screen(md) {
+    font-size: 32px;
+    text-align: left;
+  }
 }
 
 .scroll {
   overflow-y: auto;
   flex: 1;
+  margin-left: 15px;
+  margin-right: 15px;
+
+  @include screen(md) {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 
   @include screen(xl) {
     margin-left: 100px;
