--- a/src/components/Player/TrackView/TrackView.module.scss
+++ b/src/components/Player/TrackView/TrackView.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/functions';
+@import "../../../styles/functions";
 
 .wrap {
   padding: 0 0 20px;
@@ -22,16 +22,8 @@
   }
 
   &[data-selected="true"] {
-    // background-color: #1a1a1a;
-    // color: #ffffff;
-
     .playButton {
-      // color: #fff;
       opacity: 1;
-
-      &:hover {
-        // color: #fff;
-      }
     }
   }
 
@@ -50,11 +42,15 @@
   width: 24px;
   height: 24px;
   color: #1a1a1a;
-  opacity: 0;
+  opacity: 1;
   transition: all 0.125s;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @include screen(md) {
+    opacity: 0;
+  }
 
   &:hover {
     color: #000;
@@ -65,8 +61,11 @@
   font-size: 16px;
   letter-spacing: 0.01rem;
   margin-left: 6px;
-  transform: translateX(-30px);
   transition: all 0.125s;
+
+  @include screen(md) {
+    transform: translateX(-30px);
+  }
 }
 
 @keyframes spin {
